# moe-routing-bench

./: .gitignore  .gitmodules  README.md  env_setup.sh  pyproject.toml  resources.sh
data/: tinystories_val.txt
docs/: moe_workflow.md  project_plan_and_reference_code.md  project_plan_checklist.md  report.md  slides.md
moe_routing_bench/: __init__.py  bench.py  cli.py  config.py  routing.py  topk_impls.py  utils.py
results/: capacity_cf_multi.jsonl  expC_summary.csv  experiment_a_summary.csv  larger_scale_summary.csv  pack.jsonl  router_arch_summary.csv  subword_summary.csv  tinystories_ddp_bs_128_summary.csv  unified_summary.csv
scripts/: bench_capacity.py  bench_combine_only.py  bench_moe_layer.py  bench_pack.py  bench_pack_only.py  debug_expert_choice_ddp.sh  download_olmoe_checkpoint.sh  export_tinystories.py  plot_architecture_academic.py  plot_capacity.py  plot_expert_load_distribution.py  plot_frontier.py  plot_gate_balance.py  plot_moe_timeline.py  plot_overlay_curves.py  plot_pareto_annotated.py  plot_perft_architecture.py  plot_perft_variants.py  plot_router_arch_sweep.py  plot_routing_heatmap.py  plot_token_routing_colored.py  plot_training_curve.py  plot_unified_load_ppl.py  run_and_plot_experiment_b.sh  run_experiment_a.sh  run_experiment_b.sh  run_experiment_c.sh  run_experiment_larger_scale.sh  run_experiment_subword.sh  run_experiment_unified.sh  run_perft_experiment.sh  run_perft_variants_quick.sh  run_router_arch_sweep.sh  setup_perft_env.sh  summarize_plot_experiment_a.sh  summarize_plot_experiment_b.sh  summarize_plot_experiment_c.sh  (+8 more)
(+16 files in other folders)
