[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-routing-bench"
version = "0.0.1"
description = "Micro/macro benchmarks for Mixture-of-Experts routing components"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "nvidia-cutlass-dsl",
  "numpy>=1.24",
  "datasets",
  "pytest",
]

[tool.setuptools.packages.find]
where = [".", "3rdparty/quack"]
include = ["moe_routing_bench*", "quack*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
