[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-routing-bench"
version = "0.0.1"
description = "Micro/macro benchmarks for Mixture-of-Experts routing components"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "numpy>=1.24",
  "datasets",
  "pytest",
  "pandas",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moe_routing_bench*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
